--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,10 @@
-pandas==1.5.3
-plotly==5.9.0
-streamlit==1.22.0
-pyarrow==11.0.0
-rdmlpython==1.1.0
-numpy==1.24.2
+streamlit==1.50.0
+pandas==2.2.3
+numpy==2.0.1
+scipy==1.13.1
+plotly==6.3.1
+rdmlpython==1.1.8
+xlsxwriter==3.2.9
+openpyxl==3.1.5
+requests==2.32.5
+jinja2==3.1.6
